--- a/css/style.css
+++ b/css/style.css
@@ -453,7 +453,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #0c4da2;
+  background-color: #0dcaf0;
   padding: 25px;
   height: 325px;
 }
